assets/styles.css
/* Mobile and Global Styles */
/* Applies to screens smaller than 500px and above unless overwritten below */

body {
    background: linear-gradient(135deg, #556cd5 0%, #764ba2 100%);
    min-height: 100vh;
    font-family: monospace;
}

h3 {
    padding: 0.1rem 0rem;
}

p {
    padding: 0.5rem 0rem;
}

nav{
    display: flex;
    gap: 1rem;
    padding: 0.5rem 0.25rem;
}

button {
    border: 0.2rem solid;
    border-radius: 1rem;
    padding: 1rem 1.5rem;
    background-color: #1ABC9C;
    border-color: #FFFFFF;
    transition: all 0.2s ease;
    font-size: 1.3rem;
}

button:hover, button:focus {
    background-color: #17A18F;
    color: #FFFFFF;
    transform: scale(1.1);
}

.header {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 0.2rem;
    justify-content: space-evenly;
    color: #ffffff;
    font-size: 1.4rem;
}

.content {
    padding: 0.2rem 0.2rem;
    margin: 0 auto;
    font-size: 1rem;
    font-family: georgia;
}

.section {
    background-color: #1ABC9C;
    border-radius: 20px;
    padding: 30px;
    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(10px);
    display: none;
}

.section.active {
    display: block;
    animation: fadeIn 1s ease;
}

@keyframes fadeIn {
    from { opacity: 0; transform: translateY(20px); }
    to { opacity: 1; transform: translateY(0); }
}

.leaflet-container {
    height: 500px;
    width: 100%;
    max-width: 100%;
    max-height: 100%;
}



/* Tablet Styles */

@media screen and (min-width: 500px) {

    nav{
        gap: 2rem;
    }

    button {
        padding: 1.5rem 2rem;
    }

    button:hover, button:focus {
        transform: scale(1.2);
    }

    .content {
        padding: 0.5rem 0.5rem;
    }

    .leaflet-container {
        height: 600px;
    }

}

/* Desktop Styles */

@media screen and (min-width: 1000px) {

    nav{
        gap: 4rem;
    }
    
    button:hover, button:focus {
        transform: scale(1.4);
    }
    
    .content {
        padding: 2rem 8rem;
    }

    .leaflet-container {
        height: 800px;
    }

}

